# fastlm

./: .gitignore  =4.44.2  README.md  RESOURCES.md  pyproject.toml  utils.py
cluster/multi_gpu/: alpha.sh  alpha_multinode.sh  capella.sh  capella_multinode.sh  condor.sh  multinode_slurm.sh  slurm.sh
cluster/single_gpu/: alpha.sh  capella.sh  condor.sh  condor.sub  eval_alpha.sh  eval_capella.sh  eval_condor.sh  slurm.sh
cluster/tokenization/: condor.sh  condor.sub  slurm.sh
config/: config.yaml
data/: dataloaders.py
drawings/: progress.key  results_mockup.key
execs/: exec_db.csv  notes.md
execs/int/: tmp.sh  tmp.yaml
execs/mts/: attn_j17.pkl  gdn_j17.pkl
experiments/: analyse_results.py  download_or_tokenize_data.py  eval.py  find_max_mbs.py  hf_ds_down.py  manager.py  measure_throughput.py  notes.md  prelim_plot.py  print_model.py  throughput_analysis.py  train.py
experiments/analysis/: analyse_tokenizers.py  diagnose_throughput.py  economics.py  prelim_plot.py  throughput_analysis.py
fastlm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fla/: __init__.py
fla/layers/: gla.py  (+11 more)
manager/: __main__.py  create_decay_cfg_and_submit.py  create_main_cfg_and_submit.py  eval.py  manager_utils.py
meetings/: 08-04.md
models/: convolution.py  embeddings.py  recurrent.py  transformer.py
old_fla/: __init__.py
optim/: init_optim.py
scripts/: analyse_throughput_single_gpu.sh  batch_sync.sh  download.sh  eval_core.sh  eval_ruler.sh  flex_throughput.sh  multigpu.sh  prepare_nemotron_cc_sample.sh  print_errortail.sh  print_logtail.sh  single_gpu_throughput.sh  submit_jobs.sh  submit_jobs_mid.sh  sync.sh  testing.sh  tmp.sh  train.sh
services/: batch_sync.py  check_new_artifacts.py  download_metrics.py  sync.py  utils.py
slurm_resources/: req_int.sh
specs/: hf-sync-service.md
src/: checkpoint_utils.py  constants.py  construct_config.py  metric_tensor.py  plotting_utils.py  strategy.md  utils.py
testing/: canary_job_launch.sh  cfg_arch_test.py  cluster_detection.sh  config_test.py  dataset_test.py  eval_test.py  fla_test.py  hf_conversion_test.py  hybrid_lm_test.py  lm_test.py  profile_test.py  utils.py
tokenizer/: tokenizer_condor.sub
updates/: 06-05_to_13-05.md  08-04_to_22-04.md  13-05_to_20-05.md  21-05_to_28-05.md
(+641 files in other folders)
