[project]
name = "fastlm"
description = "Easy pretraining of hybrid language models in PyTorch"
authors = [
    { name = "Jaisidh Singh" }
]
license = { file = "LICENSE" }
readme = "README.md"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.1.0",
    "numpy>=2.3.4",
    "PyYAML>=6.0.3",
    "schedulefree>=1.4.1",
    "torch>=2.6.0",
    "transformers>=4.44.2",
    "wandb>=0.22.2",
    "xarray>=2026.4.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
    "BLE",      # disallow catch-all exceptions
    "F",        # Pyflakes rules
    "FA",       # Enforce from __future__ import annotations
    "I",        # Isort rules
    "ICN",      # Use common import conventions
    "PLE",      # Pylint Errors
    "TID",      # Some good import practices
]
